# data-collector-v0.1

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  grafana.ini
ftx_client/: Cargo.toml
ftx_client/src/: client.rs  lib.rs
src/: main.rs
