[package]
name = "data-collector"
version = "0.1.0"
authors = ["wan-nyan-wan <distributed.system.love@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sha2 = "0.9.2"
hmac = "0.10.1"
url = "2.2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }