[package]
authors = ["wan-nyan-wan <distributed.system.love@gmail.com>"]
edition = "2018"
name = "data-collector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
ftx_client = {path = "ftx_client"}
plotters = "^0.3.0"
tokio = {version = "1", features = ["full"]}

[workspace]
members = [
  # "collector",
  "ftx_client",
]

[[bin]]
name = "collector"
