[package]
authors = ["wan-nyan-wan <distributed.system.love@gmail.com>"]
edition = "2018"
name = "ftx_client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.10.1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9.2"
url = "2.2.0"
